maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: type mismatch;
 found   : plm.universe.Direction
 required: Int
avance(Direction.NORTH);
                 ^