maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall() {
	gauche();
	while (estFaceMur()) {
	droite();
	}
	avance();
		}


avance(Direction.NORTH);
 while (!(estSurBiscuit())) {
 	keepHandOnSideWall()
 }
    prendBiscuit();
}
